--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <form action="">
     <ul>
         <li>账号：<input type="text"></li>
-        <li>密码：<input type="text"></li>
+        <li>密码：<input type="password"></li>
         <li><input type="submit" value="提交"></li>
     </ul>
 </form>
