增加购物车功能

--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
 			<li><input type="submit" value="登录"></li>
 		</ul>
 	</form>
+<!--增加了一些功能-->
+<div class="cart">
+	<div class="content">
+		
+	</div>
+</div>
 </body>
 </html>
